--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a class="nav-link nav__vinculo--grid navFlex__item2" href="location.html">lOCATION</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link nav__vinculo--grid navFlex__item3" href="#">FAQ</a>
+                    <a class="nav-link nav__vinculo--grid navFlex__item3" href="faq.html">FAQ</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link nav__vinculo--grid navFlex__item4" href="contact.html" tabindex="-1">CONTACT</a>
