--- a/aboutus.html
+++ b/aboutus.html
@@ -11,25 +11,45 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/estilos.css">
     <title>VIA Clothes</title>
 </head>
 <body>
     <div id="grilla">
-        <header class="border rowFlex">
-           <img class="navImg  animate__animated animate__fadeInLeft" src="img/logo_small.png" alt="logo">
-        
-           <div class="navGrid">
-            <a href="homepage.html" class="nav__vinculo--grid navFlex__item1"> HOME </a>
-            <a href="location.html" class="nav__vinculo--grid navFlex__item2"> LOCATION </a>
-            <a href="faq.html" class="nav__vinculo--grid navFlex__item3"> FAQ </a>
-            <a href="contact.html" class="nav__vinculo--grid navFlex__item4"> CONTACT </a>
-            <a href="aboutus.html" class="nav__vinculo--grid navFlex__item5"> ABOUT US</a>
-        </div>
-        </header>
-        
+        <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12 col-xs-12"> 
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                  <img class="navbar-brand" src="img\logonavbar.png">
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link nav__vinculo--grid navFlex__item1" href="homepage.html">HOME</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link nav__vinculo--grid navFlex__item2" href="location.html">lOCATION</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link nav__vinculo--grid navFlex__item3" href="faq.html">FAQ</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link nav__vinculo--grid navFlex__item4" href="contact.html" tabindex="-1">CONTACT</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link nav__vinculo--grid navFlex__item5" href="aboutus.html" >ABOUT US</a>
+                      </li>
+                    </ul>
+                  </div>
+                </nav>
+              </div>
+            </div>
+          </div>
         <section id="productos" class="border">
-            <h2>OUR STORY</h2>
+            <h1>OUR STORY</h1>
         </section>
         <section id="servicios" class="border">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque facilisis lobortis nulla auctor porttitor. Mauris dictum semper eros ac pretium. Suspendisse nec sodales sem. Nulla quam purus, vestibulum tristique dapibus ac, suscipit id lectus. Fusce posuere dolor risus, ut volutpat mauris sagittis vitae. Mauris ac lectus ex. Aliquam eget aliquet elit, vel varius tortor. Maecenas vel dolor eu justo dignissim mollis. In est felis, euismod porttitor egestas sed, pharetra in nibh. Integer finibus magna purus, ut condimentum enim ultricies ac. Aliquam erat volutpat. Praesent at enim quam. Pellentesque cursus, tortor vel luctus euismod, lacus massa vulputate dolor, sagittis tristique massa eros a nunc. Nunc tempor in elit quis sodales. Sed at rhoncus nisi.
