--- a/contact.html
+++ b/contact.html
@@ -17,37 +17,37 @@
     <title>VIA Clothes</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12 col-xs-12"> 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <img class="navbar-brand" src="img\logonavbar.png">
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link nav__vinculo--grid navFlex__item1" href="homepage.html">HOME</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link nav__vinculo--grid navFlex__item2" href="location.html">lOCATION</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link nav__vinculo--grid navFlex__item3" href="#">FAQ</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link nav__vinculo--grid navFlex__item4" href="contact.html" tabindex="-1">CONTACT</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link nav__vinculo--grid navFlex__item5" href="aboutus.html" >ABOUT US</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 col-xs-12"> 
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <img class="navbar-brand" src="img\logonavbar.png">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link nav__vinculo--grid navFlex__item1" href="homepage.html">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav__vinculo--grid navFlex__item2" href="location.html">lOCATION</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav__vinculo--grid navFlex__item3" href="faq.html">FAQ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav__vinculo--grid navFlex__item4" href="contact.html" tabindex="-1">CONTACT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav__vinculo--grid navFlex__item5" href="aboutus.html" >ABOUT US</a>
+              </li>
+            </ul>
           </div>
-        </div>
+        </nav>
       </div>
+    </div>
+  </div>
       </header><hr>	<div class="row">
         <div class="col-lg-12 col-xs-12">
             
